[package]
authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
description = "A debugger written in Rust"
documentation = "http://starfleetcadet75.github.io/rdbg/"
homepage = "https://github.com/starfleetcadet75/rdbg/"
keywords = [    
    "debugger",
    "gdb",
    "lldb",
    "rust",       
]
name = "rdbg"
version = "0.1.0"
readme = "README.md"
license-file = "LICENSE.md"                      
repository = "https://github.com/starfleetcadet75/rdbg"

[[bin]]
name = "rdbg"
path = "src/bin/rdbg/main.rs"
required-features = ["bin"]

[dependencies]
error-chain = "0.11.0"
simplelog = "^0.5.2"
capstone = "0.3.1"
ansi_term = "0.11"
cfg-if = "0.1"
log = "0.4.1"

[dependencies.object]
branch = "master"
git = "https://github.com/gimli-rs/object"

[dependencies.nix]
branch = "master"
git = "https://github.com/nix-rust/nix"

[dependencies.clap]
version = "~2.31.0"
optional = true

[dependencies.rustyline]
branch = "master"
git = "https://github.com/kkawakam/rustyline"
optional = true

[features]
bin = [
    "clap",
    "rustyline",
]

[lib]
name = "rdbg_core"
path = "src/lib.rs"
