[package]
name = "rdbg"
version = "0.1.0"
description = "A debugger written in Rust"
repository = "https://github.com/starfleetcadet75/rdbg"
homepage = "https://github.com/starfleetcadet75/rdbg/"
documentation = "http://starfleetcadet75.github.io/rdbg/"
license-file = "../LICENSE.md"
readme = "../README.md"
authors = ["starfleetcadet75 <starfleetcadet75@gmail.com>"]
keywords = ["debugger", "gdb", "lldb", "rust"]

[[bin]]
name = "rdbg"

[dependencies]
clap = "~2.19.0"
simplelog = "^0.4.2"
log = "0.3.8"
fnv = "1.0.3"
rustyline = { git = "https://github.com/kkawakam/rustyline", branch = "master" }
rdbg_core = { path = "../rdbg_core" }
