[package]
name = "rdbg_core"
version = "0.1.0"

[lib]
name = "rdbg_core"

[dependencies]
simplelog = "^0.4.2"
log = "0.3.8"
fnv = "1.0.3"
goblin = "0.0.10"
#gimli = "0.14.0"
tarpc = "0.9.0"
tarpc-plugins = "0.2.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
nix = { git = "https://github.com/nix-rust/nix", branch = "master" }
libc = { git = "https://github.com/rust-lang/libc", branch = "master" }
